--- a/cyber-manager/frontend/src/pages/identification/identification.scss
+++ b/cyber-manager/frontend/src/pages/identification/identification.scss
@@ -18,7 +18,7 @@
   padding-right: 40px;
   padding-top: 30px !important;
   padding-bottom: 30px !important;
-  background-image: radial-gradient(circle, rgb(46, 46, 46) 0%, rgb(87, 87, 87) 49%, rgb(29, 29, 29)100%);
+  background-image: linear-gradient(#525252, #111111);
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -37,9 +37,13 @@
     border-bottom-style: none;
     border-color: rgb(121, 121, 121);
     border-width: 2px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    background-color: rgba(255, 255, 255, 0.801);
+    border-radius: 15px;
+    // border-top-right-radius: 15px;
+    background-color: rgba(255, 255, 255, 0);
+
+    margin-bottom: 20px !important;
+    background-color: rgba(255, 255, 255, 0.027);
+    box-shadow: 0px 2px 2px black;
 
     .mini-toolbar_title {
       font-family: Arial, Helvetica, sans-serif;
@@ -49,11 +53,14 @@
   }
 
   .stepper {
-    background-color: rgba(255, 255, 255, 0.801);
+    background-color: rgba(255, 255, 255, 0.027);
     height: 95%;
-    border-radius: 0px;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
+    border-radius: 15px;
+    // border-radius: 15px;
+    padding-left: 40px;
+    padding-right: 40px;
+    // box-shadow: none !important;
+    box-shadow: 0px 2px 2px black;
 
     .v-stepper__content {
       height: max-content !important;
@@ -71,14 +78,15 @@
   .step-content {
     display: flex;
     height: 100%;
+
     .left_content-box {
       position: relative;
       width: 300px;
       min-width: 300px;
-      margin-right: 40px;
+      margin-right: 80px;
 
       .fields {
-        margin-top: 20px;
+        // margin-top: 20px;
         padding-bottom: 0px;
         padding-top: 0px;
 
@@ -152,19 +160,107 @@
         position: relative;
         width: calc(100% - 150px);
         .v-icon {
-          color: green;
+          color: rgb(29, 211, 29);
+        }
+      }
+    }
+
+    .table-header {
+      position: relative;
+      width: 100% !important;
+      height: 60px !important;
+      // background-color: red;
+      padding-left: 20px;
+      padding-right: 30px;
+      top: 80px;
+
+      .order {
+        position: relative;
+        margin: auto;
+        margin-bottom: 10px;
+        width: 100%;
+        height: 60px;
+        // background-color: #525252;
+        border-radius: 15px;
+        display: flex;
+        
+        .left-box {
+          position: relative;
+          width: 5%;
+          height: 100%;
+          .icon {
+            position: relative;
+            top: 30%;
+          }
+        }
+        .content-box {
+          position: relative;
+          width: 90%;
+          height: 100%;
+          // background-color: blue;
+          padding-left: 120px;
+        }
+        .right-box {
+          position: relative;
+          width: 5%;
+          height: 100%;
+          .icon {
+            position: relative;
+            top: 30%;
+          }
         }
       }
     }
 
     .table-box {
       position: relative;
+      top: 50px;
       width: 100% !important;
       height: 415px !important;
       text-align: center;
-      top: 110px;
-      background-color: rgba(255, 255, 255, 0.486);
-      border-radius: 10px;
+      background-color: rgba(255, 255, 255, 0.027);
+      overflow-y: scroll;
+      padding: 20px;
+      border-radius: 15px;
+
+      // TABLE
+      .order {
+        position: relative;
+        margin: auto;
+        margin-bottom: 10px;
+        width: 100%;
+        height: 60px;
+        background-color: #525252;
+        border-radius: 15px;
+        display: flex;
+        
+        .left-box {
+          position: relative;
+          width: 5%;
+          height: 100%;
+          .icon {
+            position: relative;
+            top: 30%;
+          }
+        }
+        .content-box {
+          position: relative;
+          width: 90%;
+          height: 100%;
+          margin-top: 10px;
+          // background-color: blue;
+        }
+        .right-box {
+          position: relative;
+          width: 5%;
+          height: 100%;
+          .icon {
+            position: relative;
+            top: 30%;
+          }
+        }
+      }
+      // /TABLE
 
       .orders-table {
         background-color: rgba(230, 230, 230, 0) !important;
@@ -196,7 +292,7 @@
           font-size: 80px;
         }
       }
-    }
+    } 
   }
 
   // STEP 2 REPAIR
